data/derived/fa15/progs/unify/prog1924.ml.out
Characters 29-42:
  let stringOfList f l = "[" ^ List.map(f l) ^ sepConcat(";" l) ^ "]";;
                               ^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string
